[package]
name = "api-ws-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.52.0"
shuttle-warp = "0.52.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
warp = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
log = "0.4"
env_logger = "0.9"
bytes = "1.0"